examples/argorollout/examples/deployment/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo
  namespace: test
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: rollouts-demo
